{
    "name": "PopupInput",
    "maps": [
        {
            "name": "ActivatePopup",
            "id": "124930c8-efe9-4420-9d90-9780805c778d",
            "actions": [
                {
                    "name": "Popup",
                    "type": "Button",
                    "id": "7fff5eeb-eab6-408c-b8fa-b7453bc2b6ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "52ca6a83-bd64-4e99-92e9-46560498b3ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "29eef2c6-c834-4761-9504-209a05951c9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "212910cd-3b49-4b96-9bd6-76d77a72d4ce",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Popup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08ff3d0c-89f8-48b2-acf4-847491f778f4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4efd48d-72c5-4d7f-b732-eb0b2a3255d4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}